# surreal-gis

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  surrealism.toml
surrealgis-core/: Cargo.toml
surrealgis-core/src/: bbox.rs  coordinate.rs  error.rs  flags.rs  geometry.rs  lib.rs  srid.rs  validation.rs
surrealgis-core/src/convert/: from_geo.rs  mod.rs  to_geo.rs
surrealgis-core/src/serialization/: ewkt.rs  geojson.rs  mod.rs  wkb.rs  wkt.rs
surrealgis-crs/: Cargo.toml
surrealgis-crs/data/: epsg_top50.json
surrealgis-crs/src/: error.rs  lib.rs  projection.rs  registry.rs  transform.rs
surrealgis-functions/: Cargo.toml
surrealgis-functions/src/: lib.rs
surrealgis-functions/src/accessors/: basic.rs  derived.rs  mod.rs  predicates.rs
surrealgis-functions/src/affine/: mod.rs  st_affine.rs  st_rotate.rs  st_scale.rs  st_translate.rs
surrealgis-functions/src/clustering/: mod.rs  st_cluster_dbscan.rs  st_cluster_kmeans.rs  st_cluster_within.rs
surrealgis-functions/src/constructors/: mod.rs  st_make_envelope.rs  st_make_line.rs  st_make_polygon.rs  st_point.rs
surrealgis-functions/src/crs/: mod.rs  st_set_srid.rs  st_transform.rs
surrealgis-functions/src/editors/: mod.rs  st_collect.rs  st_force_2d.rs  st_line_merge.rs  st_multi.rs  st_reverse.rs  st_snap_to_grid.rs  st_unary_union.rs
surrealgis-functions/src/linear_ref/: mod.rs  st_line_interpolate_point.rs  st_line_locate_point.rs  st_line_substring.rs
surrealgis-functions/src/measurement/: mod.rs  st_area.rs  st_azimuth.rs  st_distance.rs  st_dwithin.rs  st_length.rs  st_perimeter.rs
surrealgis-functions/src/output/: mod.rs  st_as_ewkt.rs  st_as_geojson.rs  st_as_text.rs  st_as_wkb.rs
surrealgis-functions/src/overlay/: mod.rs  st_difference.rs  st_intersection.rs  st_sym_difference.rs  st_union.rs
surrealgis-functions/src/processing/: mod.rs  st_buffer.rs  st_concave_hull.rs  st_convex_hull.rs  st_delaunay_triangles.rs  st_simplify.rs  st_simplify_preserve_topology.rs  st_voronoi_polygons.rs
surrealgis-functions/src/relationships/: mod.rs  predicates.rs  st_relate.rs
surrealgis-index/: Cargo.toml
surrealgis-index/src/: bbox_filter.rs  indexed_geometry.rs  lib.rs  rtree_index.rs  spatial_index.rs
surrealgis-wasm/: Cargo.toml  surrealism.toml
surrealgis-wasm/src/: adapter.rs  arg_parser.rs  error_bridge.rs  lib.rs
surrealgis-wasm/src/exports/: accessors.rs  affine.rs  clustering.rs  constructors.rs  crs.rs  editors.rs  linear_ref.rs  measurement.rs  mod.rs  output.rs  overlay.rs  processing.rs  relationships.rs
test-data/geojson/: collection.geojson  point.geojson  polygon.geojson
test-data/golden/: st_area.json  st_distance.json  st_intersects.json  st_transform.json
test-data/wkt/: linestrings.wkt  multigeometries.wkt  points.wkt  polygons.wkt
