[workspace]
members = [
    "surrealgis-core",
    "surrealgis-functions",
    "surrealgis-crs",
    "surrealgis-index",
    "surrealgis-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nitin <nitin84india@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/nitin84india/surreal-gis"

[workspace.dependencies]
# Geometry & algorithms
geo = "0.32"
geo-types = "0.7"
geozero = { version = "0.14", features = ["with-wkb", "with-geo"] }
wkt = "0.11"

# CRS
proj4rs = { version = "0.1", features = ["crs-definitions"] }

# Spatial index
rstar = "0.12"

# Processing & clustering
voronoice = "0.2"
rand = "0.8"

# SurrealDB
surrealdb = "2.2"

# Surrealism SDK (matches SurrealDB v3.0.0 server)
surrealism = "0.1.9"
surrealdb-types = "3.0.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & utils
thiserror = "2.0"
anyhow = "1"
bitflags = "2"

# Testing
approx = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
