[package]
name = "surrealgis-core"
description = "Pure geometry engine for SurrealGIS - DDD value objects, aggregate root, conversions, and serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
geo-types = { workspace = true }
geo = { workspace = true }
wkt = { workspace = true }
geozero = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
