[package]
name = "surrealgis-functions"
description = "Spatial function implementations for SurrealGIS - constructors, accessors, predicates, measurement"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
surrealgis-core = { path = "../surrealgis-core" }
surrealgis-crs = { path = "../surrealgis-crs" }
surrealgis-index = { path = "../surrealgis-index" }
geo = { workspace = true }
geo-types = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
voronoice = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
