[package]
name = "surrealgis-wasm"
description = "WASM boundary for SurrealGIS - Surrealism plugin exports and anti-corruption layer"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
surrealgis-core = { path = "../surrealgis-core" }
surrealgis-functions = { path = "../surrealgis-functions" }
surrealgis-crs = { path = "../surrealgis-crs" }
surrealgis-index = { path = "../surrealgis-index" }
geo-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
surrealism = { workspace = true }
surrealdb-types = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
